                added Clamp() helper function
        userinterface/
            legacymenu/
                racescreens/
                    raceconfigstate.cpp
                        included "racemanagers.h"
                        changed RmConfigRunState(): assign ts.SetTrack and ts.GetTrack instead of removed ts.pRace
                    racerunningmenus.cpp
                        removed the help menu and other unnecessary functionalities for experiments when FORCE_EXPERIMENT_SETUP is defined
                CMakeList.txt
                  added    ResearcherMenu.h and .cpp
                  added    DataSelectionMenu.h and .cpp
                  added    SaveMenu.cpp
                  added    ConfirmationMenu.cpp
                  added    backend in both ADD_SDLIB_LIBRARY and ADD_SDLIB_INCLUDEDIR
                  removed  player, graph, opengl, advanced graph, simu, ai, hostsettings configs
                  added    DataCompressionMenu.cpp and .h
                legacymenu.h
                    ActivateResearcherMenu()
                legacymenu.cpp
                    included "ResearcherMenu.h"
                    included "DataSelectionMenu.h"
                    added    ActivateResearcherMenu()
                    changed  backLoad()
                    changed  activate()
                    changed onRaceFinished();
                    removed player, graph, opengl, advanced graph, simu, ai, hostsettings configs
                mainscreens/
                    mainmenu.cpp
                        included "DataSelectionMenu.h"
                        removed  <playerconfig.h>
                        changed  MainMenuInit()
                        changed  MainMenuInit()
                        included "ConfigEnums.h"
                        changed  onExitMenuActive() method
                        renamed  raceselectmenuinit to researcherselectmenuinit
                    exitmenu.cpp
                        included "ConfigEnums.h"